# log4cppTutorial

./: CMakeLists.txt  README.md  build.bat  main.cpp
lib/log4cpp/: log4cppConfig.cmake
